# logger2

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/shirose/: CMakeLists.txt  log_formatter.hpp  log_level.hpp  log_macros.hpp  logger.hpp  logging.hpp
src/: CMakeLists.txt  log_formatter.cpp  log_level.cpp  logger.cpp  logging.cpp
test/: CMakeLists.txt  logging_test.cpp
